--- a/Facilescan/app/src/main/AndroidManifest.xml
+++ b/Facilescan/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
         <provider
             android:authorities="com.incwo.facilescan.fileprovider"
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
