--- a/Facilescan/build.gradle
+++ b/Facilescan/build.gradle
@@ -3,15 +3,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'io.fabric.tools:gradle:1.29.0'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
     }
 }
 
