--- a/Facilescan/build.gradle
+++ b/Facilescan/build.gradle
@@ -2,10 +2,10 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.2.0'
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
     }
@@ -14,7 +14,6 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
         mavenCentral()
     }
 }
