--- a/Facilescan/app/build.gradle
+++ b/Facilescan/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.incwo.facilescan"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 7
-        versionName "1.6.4"
+        versionCode 8
+        versionName '1.7.0'
     }
 
     // Directory of test assets
